--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,13 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.twilio.sdk:twilio:9.2.5'
+
 }
 
 tasks.named('test') {
